--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="./logo1.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
   -->
-  <title>React Count Down App</title>
+  <title>ToxiCoder Count Down App</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
 
   <div id="content">
     <header>
-      <h1>The <em>Almost</em> Final Countdown</h1>
+      <h1><em>ToxiCoder</em> Final Countdown</h1>
       <p>Stop the timer once you estimate that time is (almost) up</p>
     </header>
     <div id="root"></div>
